# DiscordBot

./: .env.example  .gitignore  DEPLOYMENT.md  PRIVACY.md  QUICKSTART.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
api/: __init__.py  app.py  main.py
api/core/: __init__.py  config.py  database.py  jwt_handler.py  rate_limiter.py  security.py
api/models/: __init__.py  api_key.py  audit_log.py  bot_settings.py  command_config.py  custom_command.py  module.py  role.py  user.py
api/routes/: __init__.py  audit.py  auth.py  bot.py  commands.py  dashboard.py  guilds.py  minecraft.py  settings.py  users.py
api/schemas/: __init__.py  auth.py  bot.py  commands.py  minecraft.py  settings.py
api/tasks/: cleanup.py
api/websocket/: __init__.py  logs.py  manager.py  status.py
bot/: __init__.py  config.py  main.py
bot/cogs/: __init__.py  admin.py  automod.py  custom_commands.py  minecraft.py  moderation.py  utility.py
bot/services/: __init__.py  api_connector.py  database.py  logger.py
dashboard/: package.json  tailwind.config.js
dashboard/static/css/: input.css  main.css
dashboard/static/js/: app.js  auth.js  websocket.js
dashboard/templates/: base.html  commands.html  dashboard.html  login.html  logs.html  metrics.html  minecraft.html  modules.html  privacy.html  register.html  settings.html  users.html
docker/: api.Dockerfile  bot.Dockerfile  nginx.conf
docs/: database-migration.md  deployment.md  env-guide.md  security-checklist.md  setup-pycharm.md  troubleshooting.md
migrations/: alembic.ini
migrations/alembic/: env.py
migrations/alembic/versions/: 001_initial_migration.py  002_add_custom_commands_and_oauth.py  003_drop_custom_commands.py  004_audit_log_retention.py  005_remove_api_key_tracking.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api-dashboard.json  bot-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: deploy.sh  seed.py
systemd/: api.service  bot.service
tests/: conftest.py
tests/integration/: test_api_integration.py
tests/unit/api/: __init__.py  test_auth.py  test_bot.py  test_security.py  test_settings.py
tests/unit/bot/: __init__.py  test_api_connector.py  test_config.py
